Fixed an issue with alignment of text on buttons.
# 0.16.08 (48713) Feb 7, 2011
2/7/11 Depoloying release candidate to dev.
Added the "...sim speed..." caption to the speed control.
# 0.16.07 (44115) Sep 16, 2010
9/16/10 Publishing to dev for review & interviews.
Made it possible to continuously inject particles by holding down the button on the injector
# 0.16.06 (43931) Sep 10, 2010
9/10/10 Publishing version to dev for review and possibly interviews.
Implemented different shape for gated vs. non-gated channels.
# 0.16.05 (43737) Sep 1, 2010
9/1/10 Changed sim name to Membrane Channels, changed red particles & gates to green, hooked play area state to buttons.
8/31/10 Changed name of sim from Membrane Diffusion to Membrane Channels, since this is apparently more accurate terminology.
# 0.16.04 (43549) Aug 26, 2010
8/26/10 Publishing a version with several changes based on review at weekly PhET meeting.
8/26/10 Replaced dialog that was shown when particle chamber full with different behavior (button press ignored, no particles injected).
8/26/10 Replaced dialog that was shown when membrane full with different behavior (animation back to tool box).
8/26/10 Swapped order of channels in the tool boxes to be more consistent with rest of sim.
8/26/10 Changed red particles to green in order to avoid confusion with red button.
# 0.16.03 (43530) Aug 26, 2010
8/26/10 Fixed an issue where particles could end up moving outside the chamber
# 0.16.02 (43500) Aug 25, 2010
8/25/10 Version being published for review.  The majority of the initially specified functionality is implemented.
# 0.16.01 (43324) Aug 20, 2010
8/20/10 First dev version published.  This contains much of the specified functionality.
6/3/10 - change log file created