@@ -13,8 +13,9 @@ ModuleTitle.MembraneChannelsModule =Membrane Channels
 
 # Control Panel
 controlPanel.showConcentrations=Show Concentrations
-controlPanel.closeChannels=Close Channels
-controlPanel.openChannels=Open Channels
+controlPanel.close=Close
+controlPanel.open=Open
+controlPanel.channels=Channels
 controlPanel.clearParticles=Clear Particles
 
 # Tool box in the play area
